# ostis-discrete-math

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: tests.cmake
problem-solver/cxx/: CMakeLists.txt
problem-solver/cxx/add_section_to_set_module/: CMakeLists.txt  add_section_to_set_module.cpp  add_section_to_set_module.hpp
problem-solver/cxx/add_section_to_set_module/add_section_to_set_agent/: add_section_to_set_agent.cpp  add_section_to_set_agent.hpp
problem-solver/cxx/add_section_to_set_module/keynodes/: add_section_to_set_keynodes.hpp
problem-solver/cxx/add_section_to_set_module/test/units/: example_agent_test.cpp
problem-solver/cxx/example-module/: CMakeLists.txt  example_module.cpp  example_module.hpp
problem-solver/cxx/example-module/agent/: example_agent.cpp  example_agent.hpp
problem-solver/cxx/example-module/keynodes/: example_keynodes.hpp
problem-solver/cxx/example-module/test/: CMakeLists.txt
problem-solver/cxx/example-module/test/units/repo/: strings1.scdb
scripts/: run_sc_machine.sh
scripts/clang/: check_formatting.sh  format_code.sh
